# pasmo

./: CMakeLists.txt
pasmo/: asm.cpp
